--- a/ja/07_answering_path_query.ipynb
+++ b/ja/07_answering_path_query.ipynb
@@ -212,7 +212,7 @@
         "\n",
         "## この章のまとめ\n",
         "\n",
-        "この章ではGraphillionを用いて最適化問題を解く例を紹介しました．最適化問題を解くことに限定すればGraphillion意外にも有用なツールは多数存在します．一方で，ただ最適化するだけでなく，適宜条件を追加したり，解をいくつも取り出したりといった柔軟さがGraphillionには備わっています．[次章](08_network_reliability.ipynb)ではより複雑な問題をGraphillionを使って解く事例を紹介します．\n"
+        "この章ではGraphillionを用いて最適化問題を解く例を紹介しました．最適化問題を解くことに限定すればGraphillion以外にも有用なツールは多数存在します．一方で，ただ最適化するだけでなく，適宜条件を追加したり，解をいくつも取り出したりといった柔軟さがGraphillionには備わっています．[次章](08_network_reliability.ipynb)ではより複雑な問題をGraphillionを使って解く事例を紹介します．\n"
       ]
     }
   ]
