modify section title

--- a/ja/06_graph_set.ipynb
+++ b/ja/06_graph_set.ipynb
@@ -13,7 +13,7 @@
     "1. 初期化 (universeの設定)\n",
     "2. グラフ集合オブジェクトの作成\n",
     "3. グラフ集合の操作・変換\n",
-    "4. 演算の実行（最適化，数え上げ等）\n",
+    "4. グラフ集合に対する問い合わせ（最適化，数え上げ等）\n",
     "\n",
     "解きたい課題によっては手順2-4を繰り返すことによって課題を解決することになります．以下ではそれぞれの手順に対応する`GraphSet`の機能を紹介していきます．より詳しい説明については[Graphillionの公式ドキュメント](https://github.com/takemaru/graphillion/wiki)を参照ください．"
    ]
@@ -37,7 +37,7 @@
    "source": [
     "!pip install graphillion\n",
     "!git clone https://github.com/nsnmsak/graphillion_tutorial\n",
-    "!cp graphillion_tutorial/ja/tutorial_util.py ."
+    "!cp graphillion_tutorial/ja/tutorial_util.py .",
     "from graphillion import GraphSet\n",
     "from tutorial_util import draw_subgraph"
    ]
