add induced subgraph

--- a/ja/02_graph_theory.ipynb
+++ b/ja/02_graph_theory.ipynb
@@ -33,11 +33,13 @@
     "\n",
     "\n",
     "## 部分グラフ\n",
-    "あるグラフから辺と頂点をいくつか選択することで作られるグラフを**部分グラフ**とよびます．グラフから辺をいくつか選択し，その辺の端点となっている頂点を選択することで作られる部分グラフを**辺誘導部分グラフ**とよびます．下の図は部分グラフの例です．左側は辺誘導部分グラフですが，右側はそうではありません．\n",
+    "あるグラフから辺と頂点をいくつか選択することで作られるグラフを**部分グラフ**とよびます．グラフから辺をいくつか選択し，その辺の端点となっている頂点を選択することで作られる部分グラフを**辺誘導部分グラフ**とよびます．下の図は部分グラフの例です．部分グラフは赤色の辺と頂点とで表現されています．左側は辺誘導部分グラフですが，右側はそうではありません．\n",
+    "\n",
+    "<img src=\"img/02/induced_subgraph.png\" alt=\"部分グラフの例\" style=\"height: 120px;\"/>\n",
     "\n",
     "以下，本チュートリアルで部分グラフとよぶときには，辺を選択することで得られる誘導部分グラフのことを指します．\n",
     "\n",
-    "部分グラフにはいくつか特徴的なものがあります．部分グラフに含まれる全ての辺を順にたどることで，ある頂点から別の頂点にたどり着けるとき，その部分グラフを**パス**または**経路**とよびます．経路中には同じ頂点は二度含まれないとします．\n",
+    "部分グラフにはいくつか特徴的なものがあります．部分グラフに含まれる全ての辺を一度ずつ順にたどることで，ある頂点から別の頂点にたどり着けるとき，その部分グラフを**パス**または**経路**とよびます．経路中には同じ頂点は二度含まれないとします．\n",
     "\n",
     "ある頂点から同じ頂点までの経路のことを**閉路**もしくは**ループ**とよびます．部分グラフ中である2つの頂点を結ぶ経路が存在するとき，その2点は連結であるといいます．部分グラフに含まれる全ての頂点のペアが連結かつ，閉路を含まないような部分グラフを**木**とよびます．\n",
     "\n",
