--- a/ja/05_graphillion_and_zdd.ipynb
+++ b/ja/05_graphillion_and_zdd.ipynb
@@ -15,8 +15,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "YAmpRaxErGgO",
-        "colab_type": "text"
+        "id": "YAmpRaxErGgO"
       },
       "source": [
         "# Graphillionの内部\n",
@@ -29,8 +28,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "TbeQS6XFrGgS",
-        "colab_type": "text"
+        "id": "TbeQS6XFrGgS"
       },
       "source": [
         "## ゼロサプレス型二分決定グラフ (ZDD)\n",
@@ -55,8 +53,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "i4RqphD4rGgT",
-        "colab_type": "text"
+        "id": "i4RqphD4rGgT"
       },
       "source": [
         "## GraphillionとZDD\n",
@@ -69,37 +66,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6P6X4UmVrKRE",
-        "colab_type": "code",
-        "colab": {}
+        "id": "6P6X4UmVrKRE"
       },
       "source": [
         "!pip install graphillion\n",
         "!git clone https://github.com/nsnmsak/graphillion_tutorial\n",
         "!cp graphillion_tutorial/ja/tutorial_util.py ."
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QdiNmQnUrGgV",
-        "colab_type": "code",
-        "colab": {}
+        "id": "QdiNmQnUrGgV"
       },
       "source": [
         "from graphillion import GraphSet, tutorial\n",
         "from tutorial_util import draw_zdd, zdd_size, draw_subgraph, draw_universe"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "cBdhZEKWrGgb",
-        "colab_type": "text"
+        "id": "cBdhZEKWrGgb"
       },
       "source": [
         "まずは`universe`を設定します．今回は小さいグリッドグラフを設定します．"
@@ -108,23 +100,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pAOiaRBFrGgc",
-        "colab_type": "code",
-        "colab": {}
+        "id": "pAOiaRBFrGgc"
       },
       "source": [
         "grid = tutorial.grid(2, 2)\n",
         "GraphSet.set_universe(grid)\n",
         "draw_universe()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OCjU_AOArGgg",
-        "colab_type": "text"
+        "id": "OCjU_AOArGgg"
       },
       "source": [
         "次に対角頂点間を結ぶ経路の集合を表す`GraphSet`オブジェクトを作成します．"
@@ -133,22 +122,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sFMUsrRjrGgh",
-        "colab_type": "code",
-        "colab": {}
+        "id": "sFMUsrRjrGgh"
       },
       "source": [
         "paths =  GraphSet.paths(1, 9)\n",
         "len(paths)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "XF9OooVbrGgk",
-        "colab_type": "text"
+        "id": "XF9OooVbrGgk"
       },
       "source": [
         "`paths`は12個の経路からなる`GraphSet`オブジェクトです．では`paths`に対応するZDDをみてみましょう．"
@@ -157,21 +143,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ffRdP2BFrGgk",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ffRdP2BFrGgk"
       },
       "source": [
         "draw_zdd(paths)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OaqcyQW5rGgn",
-        "colab_type": "text"
+        "id": "OaqcyQW5rGgn"
       },
       "source": [
         "`draw_zdd(paths, universe)`は，このチュートリアルのために用意した`paths`に対応するZDDを描画するメソッドです．`GraphSet`はグラフ集合を辺の組合せの集合として表現しています．そのため，ZDDの楕円ノードのラベルは`universe`中の各辺に対応しています．\n",
@@ -184,21 +167,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Vv2hG7j1rGgo",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Vv2hG7j1rGgo"
       },
       "source": [
         "zdd_size(paths)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MitfZFjJrGgq",
-        "colab_type": "text"
+        "id": "MitfZFjJrGgq"
       },
       "source": [
         "12個の経路の集合を表す`paths`を27頂点からなるZDDとして表現できていることが分かります．この例だとZDDを内部表現として用いることの嬉しさが分かりづらいですね．\n",
@@ -209,23 +189,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SiqWgucLrGgq",
-        "colab_type": "code",
-        "colab": {}
+        "id": "SiqWgucLrGgq"
       },
       "source": [
         "GraphSet.set_universe(tutorial.grid(8, 8))\n",
         "paths = GraphSet.paths(1, 81)\n",
         "draw_universe()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "QSOpTMozrGgs",
-        "colab_type": "text"
+        "id": "QSOpTMozrGgs"
       },
       "source": [
         " 8x8グリッドグラフだと経路の総数は指数的に増加します．"
@@ -234,21 +211,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_hTXKKjBrGgt",
-        "colab_type": "code",
-        "colab": {}
+        "id": "_hTXKKjBrGgt"
       },
       "source": [
         "len(paths)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ueeEYIttrGgv",
-        "colab_type": "text"
+        "id": "ueeEYIttrGgv"
       },
       "source": [
         "`paths`を表すZDDの頂点数も増加しますが，経路の総数と比べると大幅に小さな値になります．"
@@ -257,21 +231,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_DjcLcGIrGgv",
-        "colab_type": "code",
-        "colab": {}
+        "id": "_DjcLcGIrGgv"
       },
       "source": [
         "zdd_size(paths)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qyxj6EwPrGgx",
-        "colab_type": "text"
+        "id": "qyxj6EwPrGgx"
       },
       "source": [
         "このように，膨大な数の部分グラフからなるグラフ集合をZDDを用いることで小さく表現することによって，Graphillionは数え上げお姉さん問題を高速に解くことができます．\n",
@@ -290,8 +261,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qOh-EFCRrGgx",
-        "colab_type": "text"
+        "id": "qOh-EFCRrGgx"
       },
       "source": [
         "## ZDDの利点\n",
@@ -308,8 +278,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KNuE6FqYrGgy",
-        "colab_type": "text"
+        "id": "KNuE6FqYrGgy"
       },
       "source": [
         "## ZDDの欠点\n",
@@ -324,7 +293,7 @@
         "## この章のまとめ\n",
         "この章ではGraphillionの内部で利用されているデータ構造であるZDDについて解説しました．GraphillionにはZDDに関する最新の研究成果が詰め込まれています．技術的な詳細に興味のある方は参考文献を参照ください．\n",
         "\n",
-        "次章以降ではGraphillionを用いて問題を解く方法をいくつか紹介します．まず[次章](06_grpah_set.ipynb) で`GraphSet`クラスの機能と，Graphillionを用いた問題解決の流れについて説明します．\n",
+        "次章以降ではGraphillionを用いて問題を解く方法をいくつか紹介します．まず[次章](06_graph_set.ipynb) で`GraphSet`クラスの機能と，Graphillionを用いた問題解決の流れについて説明します．\n",
         "\n",
         "\n",
         "## 参考文献\n",
