Colaboratory を使用して作成しました

--- a/ja/06_graph_set.ipynb
+++ b/ja/06_graph_set.ipynb
@@ -3,21 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3.7.6 64-bit",
-      "language": "python",
-      "name": "python37664bit1a5444a133b9480d833ba634f3cf5666"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.7.6"
+      "name": "python3",
+      "display_name": "Python 3"
     },
     "colab": {
       "name": "06_graph_set.ipynb",
@@ -28,7 +15,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "lqmZmnDvsogR"
+        "id": "kuxQu7Tqs0pa"
       },
       "source": [
         "# GraphSet\n",
@@ -48,7 +35,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8yS450UVsogW"
+        "id": "E3m-Qn6_s0pf"
       },
       "source": [
         "## 初期化処理\n",
@@ -61,7 +48,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "opHblHbdsogX"
+        "id": "wzHrr-JAs0pg"
       },
       "source": [
         "!pip install graphillion\n",
@@ -76,7 +63,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1cezIfBJsogX"
+        "id": "pa1Ql7FZs0pg"
       },
       "source": [
         "次に`GraphSet.set_universe()` で`universe`を設定します．"
@@ -85,7 +72,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wEyeUmnNsogX"
+        "id": "nYk6NqU_s0pg"
       },
       "source": [
         "univ = [(1, 2), (2, 3), (1, 4), (2, 5), (3, 6), (4, 5), (5, 6)]\n",
@@ -97,7 +84,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "RA9egkwVsogY"
+        "id": "Xl-uKRoBs0ph"
       },
       "source": [
         "辺は頂点のペアとして表現され，`universe` は辺のリストとして表現されます．したがって`universe`は頂点ペアのリストとして表現されます．ここでは以下のグラフを`universe`として設定しました．"
@@ -106,8 +93,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vEkBJn2WsogY",
-        "outputId": "c47c7b2d-da92-4c1b-8f13-194265d9a9ad"
+        "id": "Etc3Exa3s0ph",
+        "outputId": "5e18adf1-30ce-4b8f-8530-441908128df2"
       },
       "source": [
         "draw_subgraph(univ)"
@@ -131,7 +118,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "uMll4ZdfsogZ"
+        "id": "On5n3zYys0pi"
       },
       "source": [
         "## グラフ集合の作成\n",
@@ -142,7 +129,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UIpl5nV9sogZ"
+        "id": "Am1Ymbdcs0pi"
       },
       "source": [
         "### コンストラクタによるグラフ集合の作成\n",
@@ -153,8 +140,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cw-phPAnsogZ",
-        "outputId": "47203b3e-00a0-4b76-c05f-5aeb465491c6"
+        "id": "JhUTaI0ls0pj",
+        "outputId": "74c91155-8838-46fa-d5f1-64d72bcb946d"
       },
       "source": [
         "graph1 = [(1, 4)]\n",
@@ -182,7 +169,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Wnf1pSMvsoga"
+        "id": "I7hvV9Jms0pj"
       },
       "source": [
         "`GraphSet`オブジェクトの初期化時にグラフ（辺を表す`tuple`の`list`）の`list`を渡すことで，それに対応する`GraphSet`を作成することができます．\n",
@@ -193,8 +180,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cHQNCtFdsoga",
-        "outputId": "8cfe0149-a424-4dc7-d3f8-6f704cd32965"
+        "id": "cNG4f0ycs0pj",
+        "outputId": "a0a668ba-b359-4c68-be4a-6ee13d6531a6"
       },
       "source": [
         "gs = GraphSet([])\n",
@@ -219,7 +206,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4J7ypZINsoga"
+        "id": "Qu1D2RzGs0pj"
       },
       "source": [
         "もう一つの初期化方法として，部分グラフが含む辺のリストと，含まない辺のリストを指定する方法があります．"
@@ -228,8 +215,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8blIbyQAsoga",
-        "outputId": "21b96a41-68b4-4ebd-a022-2ba137121576"
+        "id": "ICllRXsAs0pk",
+        "outputId": "d8c0f399-56c0-4255-aae5-17312ce87af6"
       },
       "source": [
         "gs = GraphSet({'include': graph1, 'exclude': graph2})\n",
@@ -254,7 +241,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3-GBwjjJsogb"
+        "id": "BGwJHsOYs0pk"
       },
       "source": [
         "上の例で得られた`gs`は，辺`(1, 4)` を含みつつ，かつ`(1, 2)`, `(2, 3)`のいずれも含まないような部分グラフの集合を表現しています．\n",
@@ -265,8 +252,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "23ewmlPKsogb",
-        "outputId": "0e2e9eed-5902-459d-91ba-c8647e7b594b"
+        "id": "95kQeHFgs0pk",
+        "outputId": "3151cb2d-7da6-4b4b-e27e-d0a64938efd6"
       },
       "source": [
         "gs = GraphSet({})\n",
@@ -291,7 +278,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OzQuyiZDsogb"
+        "id": "qk1KmUm-s0pk"
       },
       "source": [
         "辺の数が`n`本だったとすると，可能な部分グラフの数は$2^n$通りも存在することになります．そんな大きな部分グラフの集合を気軽に作っちゃうと処理が終わらなくならないか気になるところだと思いますが，ZDDを用いることで全ての部分グラフの集合は計算機上でとても小さく表現できています．"
@@ -300,7 +287,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GsAb811Asogb"
+        "id": "xhTOovcus0pk"
       },
       "source": [
         "### 特定のグラフ集合に特化した構築法\n",
@@ -311,7 +298,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Z459Kfw-sogb"
+        "id": "tnRaaiJZs0pl"
       },
       "source": [
         "| メソッド                                     | 説明                                                         |\n",
@@ -327,7 +314,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "w87S-OQksogc"
+        "id": "me07U9Rbs0pl"
       },
       "source": [
         "ここに挙げたほかにも特定のGraphillionは特定のグラフ集合に特化した構築方法を提供しています．詳細はGraphillionの公式ドキュメントを参照ください．\n",
@@ -338,8 +325,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Brzl8eEGsogc",
-        "outputId": "d7cdb9f3-eca4-4c1d-e6fb-7cae2554d076"
+        "id": "urioB0JWs0pl",
+        "outputId": "d5367dde-084a-46a0-e0a6-a7c4276bce2d"
       },
       "source": [
         "paths = GraphSet.paths(1, 6) # 頂点1, 6間の経路の集合\n",
@@ -394,7 +381,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "H3qNgn65sogc"
+        "id": "5mE-3Y7Vs0pl"
       },
       "source": [
         "`gs.choice()`は`GraphSet`オブジェクトが表すグラフの集合からグラフを1つ取り出すメソッドです．\n",
@@ -409,7 +396,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_LiNKJFKsogc"
+        "id": "C8VD_m_7s0pm"
       },
       "source": [
         "## グラフ集合の操作，変換\n",
@@ -420,7 +407,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "joIKqh5asogc"
+        "id": "ykwyZ0Gvs0pm"
       },
       "source": [
         " ### グラフ集合の二項演算\n",
@@ -431,7 +418,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "uXS3m8Ndsogd"
+        "id": "AKqHvIOes0pm"
       },
       "source": [
         "| メソッド                                     | Description                                                  |\n",
@@ -448,7 +435,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "oyb46Xeksogd"
+        "id": "kR2kIafRs0pm"
       },
       "source": [
         "演算の具体例です．"
@@ -457,8 +444,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XYYGD66Ysogd",
-        "outputId": "b5eebb9c-faa3-4ead-8808-29ec0dae69e8"
+        "id": "gELlPRqWs0pm",
+        "outputId": "fab0687e-10f0-4752-cc0a-3c305d82e759"
       },
       "source": [
         "graph1 = [(1, 4)]\n",
@@ -483,8 +470,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YVyaXn1Ysogd",
-        "outputId": "cf78fb5a-3985-4005-9f5f-1f26bdd54812"
+        "id": "Q1Lgp2vPs0pm",
+        "outputId": "f6a662a4-5d93-4ed3-dc7e-2ff6f71a5f82"
       },
       "source": [
         "graph1 = [(1, 4)]\n",
@@ -513,7 +500,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7ib5uq-8sogd"
+        "id": "mHw5ua5ts0pn"
       },
       "source": [
         "`gs.join`は２つのグラフ集合に含まれる各グラフを結合したグラフを作ります．"
@@ -522,8 +509,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Qmq9bnQosoge",
-        "outputId": "6ffc6bce-d16f-4b86-a963-fe450ce622f9"
+        "id": "0lV96Ml0s0pn",
+        "outputId": "c976fc21-5d62-4e7f-ef73-8a79a82fcc1f"
       },
       "source": [
         "graph1 = [(1, 4)]\n",
@@ -552,7 +539,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OMsGSFavsoge"
+        "id": "rt4jRBeQs0pn"
       },
       "source": [
         "最悪の場合，これらの演算は`join`を除き`gs1`, `gs2` に対応するZDDの大きさの積に比例する実行時間がかかることが知られています．しかし実際には多くの場合で`gs1`, `gs2` および演算の結果得られるGraphSetオブジェクトのそれぞれにに対応するZDDのサイズの和の比例する時間で計算できます．`join`は最悪の場合にこれらの演算よりもさらに計算時間がかかることが知られていますが，現実的には他の演算との差を意識せずに利用しても大丈夫です．"
@@ -561,7 +548,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "AbFoDWLTsoge"
+        "id": "CHL6fIlhs0pn"
       },
       "source": [
         "### グラフ集合のフィルタリング\n",
@@ -582,8 +569,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "quf8igIksoge",
-        "outputId": "b57e74a1-07cf-4212-ec56-e89f48ac6370"
+        "id": "GKPmoH0Hs0pn",
+        "outputId": "7817cbf1-35f9-4dbf-aa6e-2859c76c53df"
       },
       "source": [
         "graph1 = [(1, 4)]\n",
@@ -612,7 +599,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bxZvm0zzsogf"
+        "id": "MAoJVaJQs0po"
       },
       "source": [
         "二項演算と同様に，これらの演算もグラフ集合を表すZDDサイズに比例する計算時間がかかります．"
@@ -621,7 +608,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Xl_02S9Hsogf"
+        "id": "cZJS3quNs0po"
       },
       "source": [
         "## 演算の実行\n",
@@ -644,8 +631,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UH7W_c9Ysogf",
-        "outputId": "4ebb24ab-0315-481c-e051-de886218cb5d"
+        "id": "v0RBt0XZs0po",
+        "outputId": "52e4df17-fdba-49a0-d807-751a0f5d190e"
       },
       "source": [
         "graph1 = [(1, 4)]\n",
@@ -670,7 +657,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ZPe5lIh1sogf"
+        "id": "xvtmd7bRs0po"
       },
       "source": [
         "### イテレータによる要素の抽出，列挙\n",
@@ -692,8 +679,8 @@
       "cell_type": "code",
       "metadata": {
         "scrolled": true,
-        "id": "oHVI9EHMsogf",
-        "outputId": "c3b3754c-45e7-4089-ee99-eb8f99308b10"
+        "id": "Mc9mJ20Ns0po",
+        "outputId": "6214d73c-a449-48c7-d66b-4737f8737e30"
       },
       "source": [
         "for graph in gs:\n",
@@ -730,7 +717,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "A1BDC5RJsogg"
+        "id": "ebYWxGHzs0pp"
       },
       "source": [
         "イテレータを用いることで，最短経路問題や最長経路問題のように，重みが最大もしくは最小の要素を取り出す問題も解くことができます．"
@@ -739,8 +726,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mVeqNa-Zsogg",
-        "outputId": "b70c8855-6484-465e-9ec7-46531c397a5d"
+        "id": "qlJuDS36s0pp",
+        "outputId": "a3a226c6-f55b-442a-e2d2-bebd25586ce8"
       },
       "source": [
         "min_graph = next(gs.min_iter()) # gsに含まれるもののうち，辺の数が最小のものを選択\n",
@@ -780,7 +767,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "I2yATvzwsogg"
+        "id": "iieU3FW1s0pp"
       },
       "source": [
         "## まとめ\n",
