Colaboratory を使用して作成しました

--- a/ja/06_graph_set.ipynb
+++ b/ja/06_graph_set.ipynb
@@ -3,21 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3.7.6 64-bit",
-      "language": "python",
-      "name": "python37664bit1a5444a133b9480d833ba634f3cf5666"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.7.6"
+      "name": "python3",
+      "display_name": "Python 3"
     },
     "colab": {
       "name": "06_graph_set.ipynb",
@@ -62,17 +49,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "KckaF6LXtAXJ",
-        "outputId": "bc469955-d6ab-41da-a636-df4c2cf3c1de",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bc469955-d6ab-41da-a636-df4c2cf3c1de"
       },
       "source": [
         "!pip install graphillion\n",
         "!git clone https://github.com/nsnmsak/graphillion_tutorial\n",
         "!cp graphillion_tutorial/ja/tutorial_util.py ."
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +96,7 @@
         "from graphillion import GraphSet\n",
         "from tutorial_util import draw_subgraph, draw_universe"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +117,7 @@
         "univ = [(1, 2), (2, 3), (1, 4), (2, 5), (3, 6), (4, 5), (5, 6)]\n",
         "GraphSet.set_universe(univ)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -146,16 +133,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "z_6Cjc3VtAXK",
-        "outputId": "c8d03106-1693-4e98-8350-75e28d5da075",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 248
-        }
+        },
+        "outputId": "c8d03106-1693-4e98-8350-75e28d5da075"
       },
       "source": [
         "draw_universe()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -197,10 +184,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "zRsV3pzGtAXL",
-        "outputId": "e5e42c5b-2353-40bc-be04-a5f610e82107",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e5e42c5b-2353-40bc-be04-a5f610e82107"
       },
       "source": [
         "graph1 = [(1, 4)]\n",
@@ -209,7 +196,7 @@
         "gs = GraphSet([graph1, graph2])\n",
         "gs"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -240,16 +227,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "hs6q_CiQtAXM",
-        "outputId": "ae704302-b351-40dd-d6b2-5d75277aa6da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ae704302-b351-40dd-d6b2-5d75277aa6da"
       },
       "source": [
         "gs = GraphSet([])\n",
         "gs"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -278,16 +265,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "TxCK12JptAXN",
-        "outputId": "ba541857-852a-42aa-8c2a-a32bba42d830",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ba541857-852a-42aa-8c2a-a32bba42d830"
       },
       "source": [
         "gs = GraphSet({'include': graph1, 'exclude': graph2})\n",
         "gs"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -318,16 +305,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "9bpnPyuntAXN",
-        "outputId": "500d7f34-d998-45cc-8cf6-f6772ab2f929",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "500d7f34-d998-45cc-8cf6-f6772ab2f929"
       },
       "source": [
         "gs = GraphSet({})\n",
         "gs"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,11 +381,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "2Jp5JtL7tAXO",
-        "outputId": "6c8ff799-c0c0-401a-d487-40315963d402",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 710
-        }
+        },
+        "outputId": "6c8ff799-c0c0-401a-d487-40315963d402"
       },
       "source": [
         "paths = GraphSet.paths(1, 6) # 頂点1, 6間の経路の集合\n",
@@ -410,7 +397,7 @@
         "cycles = GraphSet.cycles()\n",
         "draw_subgraph(cycles.choice())"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -517,10 +504,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "pzf66YLTtAXP",
-        "outputId": "f85c8564-bb2c-4679-ebbf-a9e6e75636ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f85c8564-bb2c-4679-ebbf-a9e6e75636ef"
       },
       "source": [
         "graph1 = [(1, 4)]\n",
@@ -529,7 +516,7 @@
         "gs2 = GraphSet([graph2])\n",
         "gs1.union(gs2)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -549,10 +536,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "13WFxWIxtAXP",
-        "outputId": "9c0792ec-1dd3-421b-a8f7-4742f13932ec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9c0792ec-1dd3-421b-a8f7-4742f13932ec"
       },
       "source": [
         "graph1 = [(1, 4)]\n",
@@ -562,7 +549,7 @@
         "intersection_gs = gs1.intersection(gs2)\n",
         "intersection_gs"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -591,10 +578,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "N8u9ODcstAXP",
-        "outputId": "77028397-dedd-4185-8ae7-b8c7811daead",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "77028397-dedd-4185-8ae7-b8c7811daead"
       },
       "source": [
         "graph1 = [(1, 4)]\n",
@@ -604,7 +591,7 @@
         "join_gs = gs1.join(gs2)\n",
         "join_gs"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,10 +641,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "XcEK-mq4tAXQ",
-        "outputId": "a0eb71ec-6231-4e05-bbae-a5c624a61a18",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a0eb71ec-6231-4e05-bbae-a5c624a61a18"
       },
       "source": [
         "graph1 = [(1, 4)]\n",
@@ -669,7 +656,7 @@
         "print(gs.larger(2))\n",
         "print(gs.complement())"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -719,10 +706,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "WS-5xkqotAXQ",
-        "outputId": "1dd434d0-f1d5-472b-f9b9-7d1d134d46bd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1dd434d0-f1d5-472b-f9b9-7d1d134d46bd"
       },
       "source": [
         "graph1 = [(1, 4)]\n",
@@ -732,7 +719,7 @@
         "print([(1, 4)] in gs)\n",
         "print(len(gs))"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,17 +757,17 @@
       "metadata": {
         "scrolled": true,
         "id": "uJd5VCLctAXR",
-        "outputId": "29967b8b-c2b2-4348-b982-94f37778c68c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 479
-        }
+        },
+        "outputId": "29967b8b-c2b2-4348-b982-94f37778c68c"
       },
       "source": [
         "for graph in gs:\n",
         "      draw_subgraph(graph)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -821,11 +808,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "XvAnmzrXtAXR",
-        "outputId": "0797e52a-a4a0-4008-aaa6-1807bf33cdec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 479
-        }
+        },
+        "outputId": "0797e52a-a4a0-4008-aaa6-1807bf33cdec"
       },
       "source": [
         "min_graph = next(gs.min_iter()) # gsに含まれるもののうち，辺の数が最小のものを選択\n",
@@ -834,7 +821,7 @@
         "max_graph = next(gs.max_iter()) # gsに含まれるもののうち，辺の数が最小のものを選択\n",
         "draw_subgraph(max_graph)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
