--- a/ja/01_introduction.ipynb
+++ b/ja/01_introduction.ipynb
@@ -21,7 +21,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "3HV3Smnxntau"
       },
       "source": [
@@ -73,7 +72,7 @@
         "\n",
         "6. [GraphSet](06_graph_set.ipynb): Graphillionではグラフの集合を表すGraphSetとよばれるオブジェクトを作成し，様々な操作を実行することができます．この章ではGraphSetに対して行える代表的な操作を紹介します．\n",
         "\n",
-        "7. [Graphillionによる最適化](07_optimization.ipynb): Graphillionを用いることで，グラフに関する最適化問題を解くことができます．この章ではGraphillionを用いて最適化問題を解く方法と，Graphillionが得意とする最適化問題の種類について説明します．\n",
+        "7. [Graphillionによる最適化](07_answering_path_query.ipynb): Graphillionを用いることで，グラフに関する最適化問題を解くことができます．この章ではGraphillionを用いて最適化問題を解く方法と，Graphillionが得意とする最適化問題の種類について説明します．\n",
         "8. [ネットワーク信頼性の計算](08_network_reliability.ipynb): Graphillionの機能を活用することで，ネットワークの故障に対する強さを調べることができます．\n",
         "9. [Graphillion 実践ガイド](09_practtical_guide.ipynb) Graphillionで効率的に問題を解くための指針をいくつか紹介します．"
       ]
