Colaboratory を使用して作成しました

--- a/ja/01_introduction.ipynb
+++ b/ja/01_introduction.ipynb
@@ -61,7 +61,6 @@
         "\n",
         "\n",
         "## アウトライン\n",
-        "1. はじめに\n",
         "\n",
         "2. [グラフ入門](02_graph_theory.ipynb):  本チュートリアルを理解するために必要となるグラフ理論の基礎について説明します．グラフとは何か，なぜグラフ理論が有益なのかを簡単に説明します．既にグラフ理論に習熟されている方は読み飛ばしていただいて構いません．\n",
         "\n",
@@ -75,7 +74,7 @@
         "\n",
         "7. [Graphillionによる最適化](07_answering_path_query.ipynb): Graphillionを用いることで，グラフに関する最適化問題を解くことができます．この章ではGraphillionを用いて最適化問題を解く方法と，Graphillionが得意とする最適化問題の種類について説明します．\n",
         "8. [ネットワーク信頼性の計算](08_network_reliability.ipynb): Graphillionの機能を活用することで，ネットワークの故障に対する強さを調べることができます．\n",
-        "9. [Graphillion 実践ガイド](09_practtical_guide.ipynb) Graphillionで効率的に問題を解くための指針をいくつか紹介します．"
+        "9. [Graphillion 実践ガイド](09_practical_guide.ipynb) Graphillionで効率的に問題を解くための指針をいくつか紹介します．"
       ]
     }
   ]
