--- a/ja/06_graph_set.ipynb
+++ b/ja/06_graph_set.ipynb
@@ -191,7 +191,7 @@
       },
       "source": [
         "graph1 = [(1, 4)]\n",
-        "graｐh2 = [(1, 2), (2, 3)]\n",
+        "graph2 = [(1, 2), (2, 3)]\n",
         "\n",
         "gs = GraphSet([graph1, graph2])\n",
         "gs"
@@ -511,7 +511,7 @@
       },
       "source": [
         "graph1 = [(1, 4)]\n",
-        "graｐh2 = [(1, 2), (2, 3)]\n",
+        "graph2 = [(1, 2), (2, 3)]\n",
         "gs1 = GraphSet([graph1])\n",
         "gs2 = GraphSet([graph2])\n",
         "gs1.union(gs2)"
@@ -543,7 +543,7 @@
       },
       "source": [
         "graph1 = [(1, 4)]\n",
-        "graｐh2 = [(1, 2), (2, 3)]\n",
+        "graph2 = [(1, 2), (2, 3)]\n",
         "gs1 = GraphSet([graph1, graph2])\n",
         "gs2 = GraphSet([graph2])\n",
         "intersection_gs = gs1.intersection(gs2)\n",
@@ -585,7 +585,7 @@
       },
       "source": [
         "graph1 = [(1, 4)]\n",
-        "graｐh2 = [(1, 2), (2, 3)]\n",
+        "graph2 = [(1, 2), (2, 3)]\n",
         "gs1 = GraphSet([graph1])\n",
         "gs2 = GraphSet([graph2])\n",
         "join_gs = gs1.join(gs2)\n",
@@ -648,7 +648,7 @@
       },
       "source": [
         "graph1 = [(1, 4)]\n",
-        "graｐh2 = [(1, 2), (2, 3)]\n",
+        "graph2 = [(1, 2), (2, 3)]\n",
         "gs = GraphSet([graph1, graph2])\n",
         "\n",
         "print(gs.including(1))\n",
@@ -713,7 +713,7 @@
       },
       "source": [
         "graph1 = [(1, 4)]\n",
-        "graｐh2 = [(1, 2), (2, 3)]\n",
+        "graph2 = [(1, 2), (2, 3)]\n",
         "gs = GraphSet([graph1, graph2])\n",
         "\n",
         "print([(1, 4)] in gs)\n",
