--- a/ja/08_network_reliability.ipynb
+++ b/ja/08_network_reliability.ipynb
@@ -1,16 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "colab": {
-      "name": "08_network_reliability.ipynb",
-      "provenance": []
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -72,22 +60,24 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "_xmdUNz4s4cl"
       },
+      "outputs": [],
       "source": [
         "!pip install graphillion\n",
         "!git clone https://github.com/nsnmsak/graphillion_tutorial\n",
         "!cp graphillion_tutorial/ja/tutorial_util.py ."
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "jKxLYQiKs1qW"
       },
+      "outputs": [],
       "source": [
         "from graphillion import GraphSet, tutorial\n",
         "from tutorial_util import draw_subgraph, draw_universe\n",
@@ -95,9 +85,7 @@
         "univ = tutorial.grid(4, 4)\n",
         "GraphSet.set_universe(univ)\n",
         "draw_universe()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -110,16 +98,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "7t1WrtvRs1qh"
       },
+      "outputs": [],
       "source": [
         "spanning_trees = GraphSet.trees(1, is_spanning=True)\n",
         "all_subgraphs = GraphSet({})\n",
         "gs = all_subgraphs.supergraphs(spanning_trees)"
-      ],
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -132,17 +120,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "3axbMYYws1ql"
       },
+      "outputs": [],
       "source": [
         "iterator = gs.rand_iter()\n",
         "draw_subgraph(next(iterator))\n",
         "draw_subgraph(next(iterator))\n",
         "    "
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -155,31 +143,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "mNxK8wVZs1qo",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "mNxK8wVZs1qo",
         "outputId": "9c09db1f-95ea-49ff-ba9f-b82239af9736"
       },
+      "outputs": [],
       "source": [
         "probs = {edge: 0.95  for edge in univ}\n",
         "gs.probability(probs)"
-      ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.987455319048074"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
-        }
       ]
     },
     {
@@ -193,6 +168,23 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "なお、version 1.8 から信頼性計算に特化したメソッド `GraphSet.reliability` が導入されており、`GraphSet` オブジェクト `gs` を構築することなく直接信頼性を計算できます。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "vertices = sorted(set(sum(GraphSet.universe(), ()))) # 全頂点の集合\n",
+        "GraphSet.reliability(probs, vertices)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "Mn9VkgzRs1qr"
       },
@@ -202,5 +194,30 @@
         "この章ではGraphillionを用いて情報通信ネットワークのネットワーク信頼性を計算する方法を紹介しました．ネットワークの信頼性に馴染みのある方は少ないかもしれませんが，信頼性の計算自体はグラフに関する汎用的な課題であり，かつ正確な計算が非常に困難な問題でもあります．グラフを扱う既存ソフトウェアでネットワーク信頼性を正確に計算する機能を備えているものはほぼ存在しないため，Graphillionの強みが活かされる応用事例であるといえます．\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "08_network_reliability.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": ".venv",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.2"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
